clusters/genesis/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genesis-api
  namespace: genesis
spec:
  selector:
    matchLabels:
      app: genesis-api
  template:
    metadata:
      labels:
        app: genesis-api
    spec:
      containers:
        - name: genesis
          image: koorinc/genesis:v0.0.21
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: main-store
              mountPath: /koor/
              readOnly: false

      volumes:
        - name: main-store
          persistentVolumeClaim:
            claimName: genesis-main-store
            readOnly: false
