clusters/genesis/genesis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genesis-api
  namespace: genesis
spec:
  selector:
    matchLabels:
      app: genesis-api
  template:
    metadata:
      labels:
        app: genesis-api
    spec:
      containers:
        - name: genesis-api
          image: koorinc/genesis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
