clusters/genesis/genesis-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: genesis
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: koorinc/genesis:v0.0.9
          imagePullPolicy: IfNotPresent
          command: ['./worker', 'monitor']
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
