clusters/genesis/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: genesis
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: koorinc/genesis:v0.0.18
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args:
          - |
            if [ ! -f config.yaml ]; then
              /usr/local/bin/setup.sh
            fi;
            ./genesis monitor
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: main-store
              mountPath: /koor/
              readOnly: false

      volumes:
        - name: main-store
          persistentVolumeClaim:
            claimName: genesis-main-store
            readOnly: false
