clusters/genesis/genesis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genesis-api
  namespace: genesis
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: genesis.koor.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: genesis-api
            port:
              number: 8000
