clusters/genesis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genesis-api
  namespace: genesis
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - genesis.koor.tech
    secretName: genesis-api-tls
  rules:
  - host: genesis.koor.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: genesis-api
            port:
              number: 80
